--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 </div>
                 <div class="body">
                     <h3><span>Type: </span>Outsourced to CSG International, Bangalore. Worked in a team of 8 members as a frontend dev, project had strength of 80 members.</h3>
-                    <h3><span>Overview: </span>Singleview is a customer management software for telecom companies, where a Customer contact can handle billing, services, orders, subscriptions, issues of their customer. The project was configurable with modular features that could be decided as per configuration. It could adapt to the client's theming using the same config option. </h3>
+                    <h3><span>Overview: </span>SingleView is a customer management software for telecom companies, where a Customer contact can handle billing, services, orders, subscriptions, issues of their customer. The project was configurable with modular features that could be decided as per configuration. It could adapt to the client's theming using the same config option. </h3>
                     <h3><span>Stack: Angular, NgRx, Storybook, SASS, Jest, Cypress etc.</span></h3>
                     <h3><span>Tools: Agile, JIRA, Confluence, Bitbucket, Abstract.io, Overflow.io, Trello etc.</span></h3>
 
@@ -156,7 +156,7 @@
                 </div>
                 <div class="body">
                     <h3><span>Type: </span>Outsourced to Xebia Pvt. Ltd., Gurugram. Worked in a team of 10 members as frontend dev, project had strength of 60 members. </h3>
-                    <h3><span>Overview: </span>Imperial Tobocco brand is aiming to sell vape in Europeon market, by catering to different rules and regualtions of each country in Europe. The translations and static content is handled in contentful CMS which is integrated in Next js ecommerce website.</h3>
+                    <h3><span>Overview: </span>Imperial Tobacco brand is aiming to sell vape in European market, by catering to different rules and regulations of each country in Europe. The translations and static content is handled in contentful CMS which is integrated in Next js ecommerce website.</h3>
                     <h3><span>Stack: Next, Storybook, TypeScript, Jest, Cypress etc.</span></h3>
                     <h3><span>Tools: Monorepo, Azure, K8s, Docker, CI/CD, JIRA, Confluence, Figma, ContentFul, CommerceTool, Miro, Swagger etc.</span></h3>
 
@@ -166,7 +166,8 @@
                         <li>Notably, it has UI library, app config, api repos that has to be consumed in Pulze and Blu Next js repo which was moved to monorepo.</li>
                         <li>To keep up the standards, TypeScript features like type checking, interfaces, utility types etc. are heavily used.</li>
                         <li>All static data and translations are created and served from Contentful CMS, and is consumed in Pulze and Blu</li>
-                        <li>CI/CD is followed, where release pipelines are maintained. Had access to do releases for CSR(customer service) panel for staging as well as Production.</li>
+                        <li>CI/CD is followed, where release pipelines are maintained. Had access to do releases for CSR(customer service) panel for staging as well as Production as Team's responsibility.</li>
+                        <li>Agile practices were deployed in the team, with scrum, refinement, poker, retrospective sessions.</li>
                     </ul>
                 </div>
             </div>
@@ -189,8 +190,7 @@
                         <li>Refactored and redeveloped the UI as per the Figma design, removing a lot of unnecessary and redundant code in react application</li>
                         <li>Tried to incorporate better CSS styling practices with Global and local styles, reusable classes.</li>
                         <li>Introduced shared components, DRY and KISS principle to the codebase.</li>
-                        <li>Feature development and bug fixing using TDD (Jest + Cypress)</li>
-                        <li>Atlassian Suite for seamless operations along with sprint demos and internal demos, training sessions etc.</li>
+                        <li>Updated the react codebase from class based to functional components.</li>
                     </ul>
                 </div>
             </div>
@@ -232,7 +232,7 @@
                     <h3><span>Type: </span>Edustoke's own product, worked as team member of Engineering team with strength of 5.</h3>
                     <h3><span>Overview: </span> Edustoke is a school finder application that caters to Parents looking for suitable school for their child. They have various kinds of filters, details, procedures about the schools. The product work as a mediator and lead team co-ordinates between parents and the school and generates resources, schools also has tie ups with Edustoke for gaining benefits. Worked as an employee under Engineering team.  </h3>
                     <h3><span>Stack: JavaScript, Jquery, PHP, MySQL, React etc.   </span></h3>
-                    <h3><span>Tools: SemRush, Google Analytics, Xampp, Webstorm, etc   </span></h3>
+                    <h3><span>Tools: SemRush, Google Analytics, Xampp, WebStorm, etc   </span></h3>
 
                     <ul>
                         <li>Updated UI for the website at several spaces as per requirement. </li>
@@ -258,10 +258,10 @@
                     <h3><span>Tools: Trello, Microsoft suite, Bitbucket etc. </span></h3>
 
                     <ul>
-                        <li>Updated UI for the website at several spaces as per requirement. </li>
-                        <li>Added pages for new tuitions module.</li>
-                        <li>Reduced homepage load times significantly by dynamic script loading for analytics, chat module etc.</li>
-                        <li>Added logic for creating XML site map for the project </li>
+                        <li>Redesigned the UI of the application as per new designs. </li>
+                        <li>Changed architecture of the application for using reusable components, styles etc.</li>
+                        <li>Added additional features to the application as per necessity like switching between cards and list view, better filtering mechanics, using thumbnails images for faster loading, lazy loading etc.</li>
+                        <li>Reduced the bundle size by removing redundant code base, components, files etc.</li>
                     </ul>
                 </div>
             </div>
