--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://unpkg.com/scrollreveal"></script>    
+  <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+
     <title>Document</title>
     <style>
         body{
@@ -133,11 +136,11 @@
 <body>
     <div class="container">
         <div class="text-center mb-5">
-            <h1 class="text-4xl">Gurjinder Singh</h1>
+            <h1 class="text-4xl" id="dev_name"></h1>
             <hr>
-            <h2 class="text-2xl">dev.gurjinder@gmail.com</h2>
+            <h2 class="text-2xl" id="dev_email"></h2>
         </div>
-        <h2 class=" text-center animate__animated animate__lightSpeedInLeft text-4xl max-sm:text-center max-sm:pt-5">Area of play</h2>
+        <h2 class=" text-center animate__animated animate__lightSpeedInLeft text-4xl max-sm:text-center max-sm:pt-5" id="area_play">Area of play</h2>
         <div class="flex justify-evenly max-sm:flex-col area--of--play">
             <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" class="w-1/4 tech--icon animate__animated animate__fadeInLeftBig max-sm:h-1/4 max-sm:my-5"><path d="m16 2-13.034 4.648 1.988 17.234 11.046 6.118 11.046-6.118 1.988-17.234z" fill="#dd0031"/><path d="m16 2v3.108-.014 14.182 10.724l11.046-6.118 1.988-17.234z" fill="#c3002f"/><path d="m16 5.094-8.148 18.27h3.038l1.638-4.088h6.916l1.638 4.088h3.038zm2.38 11.662h-4.76l2.38-5.726z" fill="#fff"/></svg> 
 
@@ -344,5 +347,20 @@
             </div>
         </div>
     </div>
+    <script>
+        let typedName = callTyped('#dev_name','Gurjinder Singh',30);
+        let typedEmail = callTyped('#dev_email','dev.gurjinder@gmail.com',50);
+
+        function callTyped(id,content, speed) {
+            return new Typed(id, {
+          strings: [content],
+          typeSpeed: speed,
+          showCursor: false
+        });
+        }
+      </script>
+    <script>
+        ScrollReveal().reveal('.project--card');
+    </script>
 </body>
 </html>
