--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                 </div>
                 <div class="body">
                     <h3><span>Type: </span>Client of Bentsys, Worked as the only frontend developer in the project.</h3>
-                    <h3><span>Overview: </span> Edustoke is a school finder application that caters to Parents looking for suitable school for their child. They have various kinds of filters, details, procedures about the schools. The product work as a mediator and lead team co-ordinates between parents and the school and generates resources, schools also has tie ups with Edustoke for gaining benefits.  </h3>
+                    <h3><span>Overview: </span> IPS is an all in one patient data management software system developed for the healthcare sector. The project included windows application for scheduling, registering, managing patient’s data, defining case, protocols for possible diagnosis, imaging and other features. It has a web application to facilitate mobility and provide basic features same as window application on registered tablets.   </h3>
                     <h3><span>Stack: Angular 8, Bootstrap 4, SCSS, Chart JS etc.</span></h3>
                     <h3><span>Tools: Trello, Microsoft suite, Bitbucket etc. </span></h3>
 
