--- a/index.html
+++ b/index.html
@@ -121,6 +121,19 @@
             animation-iteration-count: 1;
         }
 
+        #gitLink {
+            text-align: center;
+            
+        }
+
+        #gitLink a {
+            text-decoration: none;
+            cursor: pointer;
+            font-weight: 700;
+            font-size: 1.25rem;
+            color: #333;
+        }
+
         @media screen and (max-width:600px) {
             .area--of--play {
                 justify-content: center;
@@ -345,6 +358,10 @@
                     </ul>
                 </div>
             </div>
+
+            <div id="gitLink">
+                <a href="https://github.com/gurjinder7">Gurjinder7</a>
+            <div>
         </div>
     </div>
     <script>
