--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             cursor: pointer;
             font-weight: 700;
             font-size: 1.25rem;
-            color: #333;
+            color: purple;
         }
 
         @media screen and (max-width:600px) {
@@ -360,7 +360,7 @@
             </div>
 
             <div id="gitLink">
-                <a href="https://github.com/gurjinder7">Gurjinder7</a>
+                <a href="https://github.com/gurjinder7" title="checkout my github profile">--Gurjinder7--</a>
             <div>
         </div>
     </div>
