--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
               Skills...
             </button>
           </h2>
-          <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+          <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
             data-bs-parent="#accordionExample">
             <div class="accordion-body text-center">
               <div class="">
@@ -654,7 +654,7 @@
               Experience...
             </button>
           </h2>
-          <div id="collapseThree" class="accordion-collapse show" aria-labelledby="headingThree"
+          <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
             data-bs-parent="#accordionExample">
             <div class="accordion-body">
               <div class="timeline">
@@ -742,7 +742,7 @@
               Projects...
             </button>
           </h2>
-          <div id="collapseFour" class="accordion-collapse show" aria-labelledby="headingTwo"
+          <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingTwo"
             data-bs-parent="#accordionExample">
             <div class="accordion-body">
               <div class="card2 p-3 mb-5 text-start bg-light">
@@ -904,7 +904,7 @@
               Education...
             </button>
           </h2>
-          <div id="collapseTwo" class="accordion-collapse show" aria-labelledby="headingTwo"
+          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
             data-bs-parent="#accordionExample">
             <div class="accordion-body">
               <div class="card p-3 my-3 text-center bg-light">
