--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 
       </ul>
       <p class="p-3 raleway-font1">Frontend developer with 6+ years of experience. Understanding concepts, improving
-        logic, gaining efficiency and using best practices are primary for me, syntax is secondary. JavaScript is my
-        poison and I have developed UI in Angular, React and Vue. I have a solid understanding of these to build upon. I
-        believe in learning on my own. I can handle conversations, generate ideas and provide solutions as needed. I
-        want to explore all things web hence I worked on back end technologies to be a full stack dev. Ultimately, I
-        want to be a competent developer, a problem solver, a capable team player and a good human being.</p>
+        Logic, gaining efficiency, and using best practices are primary for me; syntax is secondary. JavaScript is my
+        poison, and I have developed UI in Angular, React, and Vue. I have a solid understanding of these to build upon. I
+        believe in learning on my own. I can handle conversations, generate ideas, and provide solutions as needed. I
+        want to explore all things web, hence I worked on back end technologies to be a full stack dev, I experiment with Node, Golang, microservices, CI/CD pipeline, Docker. Ultimately, I
+        want to be a competent developer, a problem solver, and a capable team player.</p>
     </div>
     <div class="p-3">
       <div class="accordion" id="accordionExample">
@@ -154,5 +154,6 @@
     </div>
     <script src="./script.js"></script>
 </body>
+
 
 </html>
