--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               src="./web-tech/hackerrank.svg" alt=""></a></li>
         <li><a href="https://github.com/Gurjinder7" target="_blank"><img class="icon" src="./web-tech/github.svg"
               alt=""></a></li>
-        <!-- <li><a href="https://leetcode.com/u/gurjinder7/" target="_blank"><img class="icon" src="./web-tech/leetcode.svg" alt=""></a></li> -->
+        <li><a href="https://www.npmjs.com/~gurjinder7" target="_blank"><img class="icon" src="./web-tech/npm.svg" alt=""></a></li>
 
       </ul>
       <p class="p-3 raleway-font1">Frontend developer with 6+ years of experience. Understanding concepts, improving
@@ -157,3 +157,4 @@
 
 
 </html>
+
