--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <li><a href="https://github.com/Gurjinder7" target="_blank"><img class="icon" src="./web-tech/github.svg"
               alt=""></a></li>
         <li><a href="https://www.npmjs.com/~gurjinder7" target="_blank"><img class="icon" src="./web-tech/npm.svg" alt=""></a></li>
+        <li><a href="https://exercism.org/profiles/Gurjinder7" target="_blank"><img class="icon" src="./web-tech/exercism1.svg" alt=""></a></li>
 
       </ul>
       <p class="p-3 raleway-font1">Frontend developer with 6+ years of experience. Understanding concepts, improving
@@ -157,4 +158,5 @@
 
 
 </html>
+
 
