--- a/index.html
+++ b/index.html
@@ -31,21 +31,21 @@
       <h1>Gurjinder Singh</h1>
       <h2>dev.gurjinder@gmail.com</h2>
       <ul>
-        <li> <a href="https://www.linkedin.com/in/gurjinder7/" target="_blank"> <img class="icon"
+        <li> <a href="https://www.linkedin.com/in/gurjinder7/" target="_blank" title="View LinkedIn profile"> <img class="icon"
               src="./web-tech/linkedin-app-white-icon.svg" alt=""></a></li>
-        <li><a href="https://www.hackerrank.com/profile/gurjinder7" target="_blank"><img class="icon"
+        <li><a href="https://www.hackerrank.com/profile/gurjinder7" target="_blank" title="View HackerRank profile"><img class="icon"
               src="./web-tech/hackerrank.svg" alt=""></a></li>
-        <li><a href="https://github.com/Gurjinder7" target="_blank"><img class="icon" src="./web-tech/github.svg"
+        <li><a href="https://github.com/Gurjinder7" target="_blank" title="View Github profile"><img class="icon" src="./web-tech/github.svg"
               alt=""></a></li>
-        <li><a href="https://www.npmjs.com/~gurjinder7" target="_blank"><img class="icon" src="./web-tech/npm.svg" alt=""></a></li>
-        <li><a href="https://exercism.org/profiles/Gurjinder7" target="_blank"><img class="icon" src="./web-tech/exercism1.svg" alt=""></a></li>
+        <li><a href="https://www.npmjs.com/~gurjinder7" target="_blank" title="View NPM published packages"><img class="icon" src="./web-tech/npm.svg" alt=""></a></li>
+        <li><a href="https://exercism.org/profiles/Gurjinder7" target="_blank" title="View Exercism profile"><img class="icon" src="./web-tech/exercism1.svg" alt=""></a></li>
 
       </ul>
       <p class="p-3 raleway-font1">Frontend developer with 6+ years of experience. Understanding concepts, improving
         Logic, gaining efficiency, and using best practices are primary for me; syntax is secondary. JavaScript is my
         poison, and I have developed UI in Angular, React, and Vue. I have a solid understanding of these to build upon. I
         believe in learning on my own. I can handle conversations, generate ideas, and provide solutions as needed. I
-        want to explore all things web, hence I worked on back end technologies to be a full stack dev, I experiment with Node, Golang, microservices, CI/CD pipeline, Docker. Ultimately, I
+        I want to explore all things web, hence I worked on back-end technologies to become a full-stack developer. I work with Node, Golang, microservices, CI/CD pipelines, and Docker as part of my personal project. Ultimately, I
         want to be a competent developer, a problem solver, and a capable team player.</p>
     </div>
     <div class="p-3">
@@ -158,5 +158,6 @@
 
 
 </html>
+
 
 
