NPM packages added

--- a/index.html
+++ b/index.html
@@ -140,10 +140,24 @@
         <h2 class="accordion-header vast-shadow-regular" id="headingTwo">
           <button class="accordion-button collapsed fs-1" type="button" data-bs-toggle="collapse"
             data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-            Education...
+            Published...
           </button>
         </h2>
         <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+          data-bs-parent="#accordionExample">
+          <div class="accordion-body" id="publishList">
+           
+          </div>
+        </div>
+      </div>
+        <div class="accordion-item">
+        <h2 class="accordion-header vast-shadow-regular" id="headingFive">
+          <button class="accordion-button collapsed fs-1" type="button" data-bs-toggle="collapse"
+            data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+            Education...
+          </button>
+        </h2>
+        <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive"
           data-bs-parent="#accordionExample">
           <div class="accordion-body" id="educationList">
            
