--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
       <p class="p-3 raleway-font1">Frontend developer with 6+ years of experience. Understanding concepts, improving
         Logic, gaining efficiency, and using best practices are primary for me; syntax is secondary. JavaScript is my
         poison, and I have developed UI in Angular, React, and Vue. I have a solid understanding of these to build upon. I
-        believe in learning on my own. I can handle conversations, generate ideas, and provide solutions as needed. I
-        I want to explore all things web, hence I worked on back-end technologies to become a full-stack developer. I work with Node, Golang, microservices, CI/CD pipelines, and Docker as part of my personal project. Ultimately, I
+        believe in learning on my own. I can handle conversations, generate ideas, and provide solutions as needed. I want to explore all things web, hence I worked on back-end technologies to become a full-stack developer. I work with Node, Golang, microservices, CI/CD pipelines, and Docker as part of my personal project. Ultimately, I
         want to be a competent developer, a problem solver, and a capable team player.</p>
     </div>
     <div class="p-3">
@@ -172,6 +171,7 @@
 
 
 </html>
+
 
 
 
